FullQa New/src/objects/Opportunity_Feedback__c.object
<CustomObject>
    <description>This form is to be used by sales reps to provide feedback on opportunity qualification to Inside Sales.</description>
    <fields>
        <fullName>Additional_feedback_for_Inside_Sales__c</fullName>
        <description>Please provide any additional feedback regarding this lead including additional information that shoudl have been gathered, or process for transitioning the lead that would have been helpful.</description>
        <label>Additional feedback for Inside Sales?</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Opportunity_Feedback</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sales_Ready__c</fullName>
        <description>Please indicate the lead level at the time the lead was assigned to you from inside sales.</description>
        <label>Lead Level at Time Lead Was Assigned?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>L1-Campaign reponse, not engaging</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>L2-Meaningful interaction &amp; meets PPP</fullName>
                </value>
                <value>
                    <fullName>L3-L2 + needs / interest in products</fullName>
                </value>
                <value>
                    <fullName>L4-L3 + engaging / defining requirements</fullName>
                </value>
                <value>
                    <fullName>L5-L4 + authority &amp; defined timeline</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>This_lead_should_have_been__c</fullName>
        <description>If presented with this lead again, how would you recommend the lead be treated.</description>
        <label>This lead should have been?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Passed to Me as it  Was</fullName>
                </value>
                <value>
                    <fullName>Passed to a Different Sales Rep</fullName>
                </value>
                <value>
                    <fullName>Further Qualified and Nurtured by Inside Sales</fullName>
                </value>
                <value>
                    <fullName>Qualified Out by Inside Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Was_this_lead_qualified_based_on_PPP__c</fullName>
        <description>Please indicate if this lead was reasonably qualified based on PPP criteria including but not limited to multistate nexus, ERP, ecommerce, transaction volume, exemption certificate issues, sales tax challenges or recent audit?</description>
        <label>Was this lead qualified based on PPP?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>(Deprecated) Opportunity Feedback</label>
    <nameField>
        <label>Opportunity Feedback Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Feedback</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>